<resources>
    <string name="app_name">3Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit_btn">Submit</string>
    <string name="user_fragment">User Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="hello_world">Hello World !</string>
    <string name="login_txt_view">Login</string>
    <string name="user_name_edt">User Name</string>
    <string name="pass_edt">Password</string>
    <string name="title">Title</string>
    <string name="movie_image">Movie Image</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="overview">OverView</string>
    <string name="overview_details">OverView Details</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="no_movies_in_favorite" />
    <string name="favorite" />

</resources>