<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment"
    >


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/login_txt_view"
            android:textSize="50sp"
            android:layout_marginBottom="50sp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/user_name_edt" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/pass_edt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:text="@string/submit_btn"
            android:layout_marginTop="50sp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>